Cleaning up code.